--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -5,17 +5,32 @@ on:
     types: [opened, reopened]
     
 jobs:
-  dingtalk:
-    name: Send dingtalk message
-    runs-on: ubuntu-18.04
+#   dingtalk:
+#     name: Send dingtalk message
+#     runs-on: ubuntu-18.04
+#     steps:
+#     - name: dingtalk robot message
+#       uses: hiyali/dingtalk-action@master
+#       with:
+#         url: ${{ secrets.DINGTALK_GROUP_WEBHOOK }}
+#         type: markdown
+#         content: |
+#           # Service Availability Issues
+#           ## ${{ github.event.issue.type }} ${{ github.event.issue.title }}
+#           ${{ github.event.issue.body }}
+#           > from github action message
+  ms_teams:
+    name: Send teams message
+    runs-on: ubuntu-latest
     steps:
-    - name: dingtalk robot message
-      uses: hiyali/dingtalk-action@master
+    - name: teams robot message
+      uses: wei/curl@v1
       with:
-        url: ${{ secrets.DINGTALK_GROUP_WEBHOOK }}
-        type: markdown
-        content: |
-          # Service Availability Issues
+        args: |
+          -X POST ${{ secrets.MS_TEAMS_GROUP_WEBHOOK }}
+          -H 'content-type: application/json'
+          -d '{"text":"# Service Availability Issues
           ## ${{ github.event.issue.type }} ${{ github.event.issue.title }}
           ${{ github.event.issue.body }}
           > from github action message
+          "}'
