--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -26,11 +26,4 @@ jobs:
     - name: teams robot message
       uses: wei/curl@v1
       with:
-        args: |
-          -X POST ${{ secrets.MS_TEAMS_GROUP_WEBHOOK }}
-          -H 'content-type: application/json'
-          -d '{"text":"# Service Availability Issues
-          ## ${{ github.event.issue.type }} ${{ github.event.issue.title }}
-          ${{ github.event.issue.body }}
-          > from github action message
-          "}'
+        args: -X POST ${{ secrets.MS_TEAMS_GROUP_WEBHOOK }} -H 'content-type: application/json' -d '{"text":"# Service Availability Issues\n\n## ${{ github.event.issue.type }} ${{ github.event.issue.title }}\n\n${{ github.event.issue.body }}\n\n> from github action message\n\n"}'
